--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.9.1",
+    "@tanstack/react-table": "^8.20.6",
     "bootstrap": "^5.3.3",
     "choices.js": "^11.0.2",
     "chokidar": "^4.0.3",
