--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "choices.js": "^11.0.2",
     "chokidar": "^4.0.3",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.3",
     "fullcalendar": "^6.1.15",
     "gridjs": "^6.2.0",
     "gridjs-react": "^6.1.1",
